--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   padding: 0 2rem;
 }
 
@@ -126,4 +126,85 @@
   .logo img {
     filter: invert(1);
   }
+} */
+
+.nav {
+	height: 100px;
+	width: 100%;
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	padding-right: 20px;
+	padding-bottom: 20px;
+	border-bottom: 1px solid black;
+}
+
+.newBtn {
+	border: 1px solid black;
+	background-color: transparent;
+	padding: 20px;
+	border-radius: 10px;
+	cursor: pointer;
+	font-weight: bold;
+}
+
+.graph {
+	height: 250px;
+	width: 250px;
+	border: 1px solid black;
+	border-radius: 20px;
+	margin: 20px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.main {
+	width: 100%;
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-wrap: wrap;
+}
+
+.graphDesignerContainer {
+	z-index: 10;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.graphDesigner {
+	display: flex;
+	justify-content: flex-start;
+	align-items: flex-start;
+	flex-direction: column;
+	width: 400px;
+	height: 400px;
+	border: 1px solid black;
+	position: fixed;
+	top: 20px;
+	left: 20px;
+	border-radius: 40px;
+	background-color: white;
+	padding: 20px;
+}
+
+.gDCloseBtnContainer {
+	display: flex;
+	justify-content: flex-end;
+	align-items: flex-end;
+	width: 100%;
+}
+
+.gDAddBtn,
+.gDCloseBtn {
+	border: 1px solid black;
+	background-color: transparent;
+	border-radius: 4px;
+	cursor: pointer;
+  font-weight: bold;
+  padding: 20px;
 }
