--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,7 +20,7 @@
 
 .graph {
 	height: fit-content;
-	width: 80vw;
+	width: 600px;
 	border: 1px solid black;
 	border-radius: 20px;
 	margin: 20px;
